# advanca-attestation-service

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: rust.yml
aas-protos/: Cargo.toml  build.rs
aas-protos/aas-protos-enclave/: Cargo.toml  build.rs
aas-protos/aas-protos-enclave/src/: lib.rs
aas-protos/aas-protos-std/: Cargo.toml  build.rs
aas-protos/protos/aas/: aas.proto
aas-protos/src/: aas.rs  lib.rs
aas-server/: Cargo.toml  build.rs
aas-server/src/: .main.rs.swp  main.rs
aas-server/src/aas_protos/: aas.rs  aas_grpc.rs  mod.rs
examples/attestee-client/: Makefile  buildenv.mk
examples/attestee-client/isv_app/: Cargo.toml  Makefile  build.rs
examples/attestee-client/isv_app/src/: .main.rs.swp  isv_enclave_teaclave_ecall.rs  main.rs  trusted_key_exchange_ecall.rs
examples/attestee-client/isv_enclave/: Cargo.toml  Makefile  isv_enclave.config.xml  isv_enclave.edl  isv_enclave.lds  isv_enclave_signkey_private.pem
examples/attestee-client/isv_enclave/extern_interface/: isv_enclave_teaclave_ecall.rs  isv_enclave_teaclave_ocall.rs
examples/attestee-client/isv_enclave/src/: lib.rs
protos/: aas.proto
