[workspace]

members = [
	"aas-server",
	"aas-protos/aas-protos-enclave",
	"aas-protos/aas-protos-std",
]

exclude = [
	"examples/attestee-client",
]

[patch.crates-io]
grpcio-compiler = { rev = "249e21b3593a8bdd58429d2552b9ab72d6d46526", git = "https://github.com/tikv/grpc-rs.git", default-features = false }
protobuf-build  = { rev = "7f65cc22bbb3008b4dd8c4bf710406287ebbd6f3", git = "https://github.com/tikv/protobuf-build.git" }
