[package]
name = "aas-protos"
version = "0.1.0"
authors = ["Chua Zheng Leong <czl@iiyume.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["protobuf-codec"]
protobuf-codec = ["grpcio/protobuf-codec", "protobuf-build/grpcio-protobuf-codec"]

[dependencies]
grpcio   = { git = "https://github.com/tikv/grpc-rs.git", default-features = false, features = ["openssl"] }
protobuf = { version = "2" }
futures  = { version = "0.3" }

[build-dependencies]
protobuf-build = { version = "0.11", default-features = false }
walkdir = "2.2"
