[package]
name = "aas-protos"
version = "0.2.1"
authors = ["Advanca Authors"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default        = ["protobuf-codec"]
protobuf-codec = ["grpcio/protobuf-codec", "protobuf-build/grpcio-protobuf-codec"]
sgx_enclave    = ["sgx_tstd", "sgx_types"]

[dependencies]
grpcio   = { tag = "v0.5.3", git = "https://github.com/tikv/grpc-rs.git", default-features = false, features = ["openssl"]}
protobuf = { version = "~2.8.0" }
futures  = { version = "0.3" }

sgx_types       = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}
sgx_tstd        = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true}

[build-dependencies]
protobuf-build = { version = "0.11", default-features = false }
walkdir = "2.2"
