[package]
name = "aas-server"
version = "0.2.0"
authors = ["Advanca Authors"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["protobuf-codec"]
protobuf-codec = ["grpcio/protobuf-codec"]

[dependencies]
async-std             = { version = "1" }
grpcio                = { git = "https://github.com/tikv/grpc-rs.git", default-features = false, features = ["openssl"] }
futures               = { version = "0.3" }
protobuf              = { version = "2.14" }
hex                   = { version = "0.4.2" }
serde_cbor            = { version = "0.11.1" }
advanca-crypto-types  = { git = "https://github.com/advanca/advanca-sgx-helper" }
advanca-crypto        = { git = "https://github.com/advanca/advanca-sgx-helper", features=["std_env"] }
sgx-ra                = { git = "https://github.com/advanca/advanca-sgx-helper" }
ctrlc                 = "3.1.4"
log                   = { version = "0.4.8" }
env_logger            = "0.7.1"

aas-protos            = { path = "../aas-protos" }
