[package]
name = "aas-server"
version = "0.2.1"
authors = ["Advanca Authors"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std             = { version = "1" }
grpcio                = { rev = "249e21b3593a8bdd58429d2552b9ab72d6d46526", git = "https://github.com/tikv/grpc-rs.git", default-features = false, features = ["openssl"]}
futures               = { version = "0.3" }
protobuf              = { version = "=2.8.1" }
hex                   = { version = "0.4.2" }
serde_cbor            = { version = "0.11.1" }
advanca-crypto-types  = { tag = "v0.2.0", git = "https://github.com/advanca/advanca-sgx-helper" }
advanca-crypto        = { tag = "v0.2.0", git = "https://github.com/advanca/advanca-sgx-helper", features=["std_env"] }
sgx-ra                = { tag = "v0.2.0", git = "https://github.com/advanca/advanca-sgx-helper" }
ctrlc                 = "3.1.4"
log                   = { version = "0.4.8" }
env_logger            = "0.7.1"
structopt             = "0.3"

aas-protos-std        = { path = "../aas-protos/aas-protos-std" }
